[package]
name = "slack_tower_battle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"
futures-channel = "0.3.18"
futures-util = "0.3.18"
tokio = { version = "1.18", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.11", features = ["multipart", "blocking"] }
ws = { version = "0.9.2", features = ["ssl"] }
base64 = "0.13.0"
chrono = "0.4.19"
regex = "1.5.6"
resvg = "0.22.0"
usvg = "0.22.0"
tiny-skia = "0.6.3"
rapier2d = { version = "0.12.0", features = [ "simd-stable" ] }
rand = "0.8.5"
